# esimx402

./: .gitignore  README.md
.github/workflows/: test-node.yml  test-python.yml
node/: LICENSE  README.md  package-lock.json  package.json  tsconfig.json
node/examples/: 01-buy-esim.ts  02-agent-failover.ts  03-iot-geofence.ts
node/src/: client.test.ts  client.ts  index.ts
python/: README.md  pyproject.toml
python/esimx402/: __init__.py  client.py
python/examples/: 01_buy_esim.py  02_agent_failover.py  03_iot_geofence.py
python/tests/: test_client.py
